      order:
      * check apt setting
      * check synaptic setting
      * check users gconf
      * check http_proxy environment 
    (LP: #24250)
  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - ensure correct error message if downloading failed
      (LP: #113658)
    - when fetching from mirrors, add fallback if the mirror
      is too loaded to cope
  * DistUpgrade/DistUpgradeMain.py, dist-upgrade.py:
    - re-factor and make code more modular
    - do not overwrite existing log files on upgrade
      (LP: #111819)
   
  
 --

update-manager (1:0.96.4) jaunty; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - do not generate apport report against update-manager if 
      cache.commit() failed. the report is generated against
      the failing package instead (LP: #311220)
    - honor RELEASE_UPRADER_ALLOW_THIRD_PARTY environment and do   
      not  comment out third party repositories in this case 
      (useful internal repositories, make sure that sudo does 
       not clean this env when you make use of it)
  * DistUpgrade/DistUpgrade.cfg:
    - remove powermanagement-interface on upgrades for ubuntu 
      and kubuntu (no longer needed by them)
  * DistUpgrade/DevelReleaseAnnouncement:
    - include a different release announcement for the 
      development releases
  * pre-build.sh:
    - fix version parsing

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 Jan 2009 22:12:06 +0100

update-manager (1:0.96.3) jaunty; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - when syncing inconsitent components, only sync those
      we know about (LP: #312092)
  * tests/test_sources_list.py:
    - add regression test for #312092

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 15 Jan 2009 14:14:01 +0100

update-manager (1:0.96.2) jaunty; urgency=low

  * AutoUpgradeTester/UpgradeTestBackendQemu.py:
    - add "NonInteractive","NoVirtio" switch 
    - enable virtio in the kvm backend by default