@@ -15,6 +15,8 @@ update-manager (1:0.96.5) jaunty; urgency=low
       (LP: #113658)
     - when fetching from mirrors, add fallback if the mirror
       is too loaded to cope
+    - improve logic that detects what mirror is in use by
+      sources.list inspection (LP: #107983)
   * DistUpgrade/DistUpgradeMain.py, dist-upgrade.py:
     - re-factor and make code more modular
     - do not overwrite existing log files on upgrade
